# daggyr

./: Cargo.toml  ERD.md  LICENSE  README.md  TODO.md
examples/: basic.json  basic.toml  simple_server.json
examples/agent/: agent.json  big_job.json  job.json  server.json
examples/basic/: job.json  server.json
examples/ssh/: server.json
migrations/: README.md
migrations/0000_create_runs/: down.sql
migrations/0000_enable_hstore/: up.sql
migrations/0001_create_runs/: down.sql  up.sql
migrations/0002_create_task_types/: down.sql
migrations/0003_create_tasks/: down.sql  up.sql
migrations/0004_create_task_attempts/: down.sql  up.sql
migrations/0005_create_task_expansion_values/: down.sql  up.sql
migrations/0006_create_parameters/: down.sql  up.sql
migrations/0007_create_state_type/: down.sql  up.sql
migrations/0008_create_state_changes/: down.sql  up.sql
migrations/2022-07-11-182826_create_runs/: up.sql
migrations/2022-07-11-182955_create_run_tags/: down.sql  up.sql
migrations/2022-07-11-183100_create_task_types/: down.sql  up.sql
migrations/2022-07-11-183102_create_tasks/: up.sql
migrations/2022-07-11-183140_create_task_attempts/: up.sql
migrations/2022-07-11-192650_create_state/: up.sql
migrations/2022-07-11-192651_create_state_changes/: down.sql
src/: dag.rs  lib.rs  messages.rs  migrations.rs  prelude.rs  runner.rs  storage.rs  structs.rs  utilities.rs
src/executors/: agent_executor.rs  local_executor.rs  mod.rs  noop_executor.rs  slurm_executor.rs  ssh_executor.rs
src/state_trackers/: memory_logger.rs  mod.rs  noop_logger.rs  structs.rs
src/trackers/: memory_tracker.rs  mod.rs  mongodb_tracker.rs  noop_tracker.rs
