[package]
name = "daggyr"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/kinesintech/daggyr"
description = "A flexible DAG task orchestration engine"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
futures = { version = "0.3", features = [ "std" ] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "3.1", features = ["derive"] }
users = { version = "0.11", optional = true }
bson = { version = "2.1", optional = true, features = [ "chrono-0_4" ] }
mongodb = { version = "2.1", optional = true }
sysinfo = "0.23"
serde_json = "1"
rmp-serde = "1"
log = "0.4"
fern = "0.6"
actix-web = "4"
actix-cors = "0.6"
env_logger = "0.9"
dotenv = "0.15"
diesel = { version = "1.4.8", features = ["postgres", "sqlite" ] }

[features]
slurm = ["users"]
mongo = ["mongodb", "bson"]
all = ["slurm", "mongo"]
